--- a/package.json
+++ b/package.json
@@ -9,23 +9,39 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@huggingface/inference": "^4.13.5",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.87.1",
     "bad-words": "^4.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.559.0",
     "nanoid": "^5.1.6",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "19.2.1",
-    "sentiment": "^5.0.2"
+    "react-hook-form": "^7.68.0",
+    "recharts": "^2.15.4",
+    "sentiment": "^5.0.2",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0"
   }
 }
