--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.87.1",
+    "@xenova/transformers": "^2.17.2",
     "bad-words": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,7 +28,7 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.559.0",
     "nanoid": "^5.1.6",
-    "next": "16.0.8",
+    "next": "^16.1.0",
     "react": "19.2.1",
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "19.2.1",
